--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
       If you have questions or suggestions, please drop us an email </p>
     <div class="row">
       <div class="8u 12u$(xsmall)">
-        <form method="post"action="mailto:cogsystalks@gmail.com">
+        <form method="post"action="php/form_to_email.php">
           <div class="row uniform 50%">
             <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name"></div>
             <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email"></div>
