Fix form trial n2

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: default
           </div>
         </form>
         <ul class="actions">
-          <li><input type="submit" value="Send Message"></li>
+          <li><input type="submit" name = "submit" value="Send Message"></li>
         </ul>
       </div>
       <div class="4u$ 12u$(small)">
