--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
   <h2>Upcoming Events</h2>
   <p></p>
       <div class="row">
-        {% for post in site.posts %}
+        {% for post in site.posts reversed%}
         {% if post.tags contains 'upcoming' %}
           <article class="{% cycle '6u', '6u$' %} 12u(xsmall)">
             <a href="{{ post.url }}" class="image fit thumb"><img src="{{ post.image }}" alt="" /></a>
