--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@ layout: default
   <section id="four">
     <h2>Get In Touch</h2>
     <p> We are always looking for amazing speakers, volunteers and sponsors.
-      If you have questions or suggestions, please drop us an email </p>
-    <div class="row">
-      <div class="8u 12u$(xsmall)">
+      If you have questions or suggestions, please drop us an email: cogsystalks[at]gmail.com &#160
+      <a href="mailto:{{ site.author.email }}" class="icon fa-envelope-o" aria-hidden="true"> <span class="label">Email</span> </a>
+    </p>
+    <div class="major">
+      <!-- <div class="8u 12u$(xsmall)">
         <form method="post"action="mailto:cogsystalks@gmail.com?subject=We%20want%20to%20get%20in%20touch%20with%20you" enctype="text/plain" onsubmit="location.href='{{ site.baseurl }}{% link pages/thanks.md %}';">
           <div class="row uniform 50%">
             <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name"></div>
@@ -87,20 +89,20 @@ layout: default
           <li><input type="submit" name = "submit" value="Send Message"></li>
         </ul>
         </form>
-      </div>
-      <div class="4u$ 12u$(small)">
+      </div> -->
+      <div class="6u$ 12u$(small)">
         <ul class="labeled-icons">
-          <li>
+          <!-- <li>
             <h3 class="icon fa-home"><span class="label">Address</span></h3>
             Technical University of Denmark</br>
             Richard Petersens Plads</br>
             Bygning 321, rum 133</br>
             2800 Kgs. Lyngby
-          </li>
+          </li> -->
           <li>
             <h3 class="icon fas fa-user"><span class="label">Person1</span></h3>
             <a href="https://www.dtu.dk/english/service/phonebook/person?id=150066&cpid=278391&tab=0">Alison Pouplin</a>
-           </br>
+            &
             <h3 class="icon fas fa-user"><span class="label">Person2</span></h3>
             <a href="https://www.dtu.dk/service/telefonbog/person?id=115952&cpid=260886&tab=0">Federico Bergamin</a>
           </li>
