update for the new semester

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
   <section id="four">
     <h2>Get In Touch</h2>
     <p> We are always looking for amazing speakers, volunteers and sponsors.
-      If you have questions or suggestions, please drop us an email: cogsystalks[at]gmail.com &#160
+      If you have questions or suggestions, please drop us an email: alpu[at]dtu.dk &#160
       <a href="mailto:{{ site.author.email }}" class="icon fa-envelope-o" aria-hidden="true"> <span class="label">Email</span> </a>
     </p>
     <div class="major">
